se agregó el readme con la description y instrucciones del proyecto